<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/ltyGuardarCasa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:alpha="0.5"></RelativeLayout>
        <RelativeLayout
            android:id="@+id/lytContenidoconf"
            android:layout_width="match_parent"
            android:layout_height="@dimen/largo_confirmarguardar"
            android:layout_marginLeft="@dimen/margen_izquierdo"
            android:layout_marginRight="@dimen/margen_derecho"
            android:layout_centerInParent="true" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <LinearLayout
                android:id="@+id/lytContenidoGuardar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/largo_contenidoguardar"
                android:orientation="vertical"
                android:background="@android:color/white">
                <EditText
                    android:id="@+id/edt_Numero"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:hint="@string/str_numero"
                    android:imeOptions="actionNext"
                    style="@style/cajatexto"/>
                <EditText
                    android:id="@+id/edt_Nombre"
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:hint="@string/str_nombre"
                    android:imeOptions="actionDone"
                    style="@style/cajatexto"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/largo_abajo"
                android:layout_below="@+id/lytContenidoGuardar"
                android:orientation="horizontal"
                android:background="@android:color/white">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btnCancelarGuardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_cancelar"
                        android:textColor="@android:color/white"
                        android:paddingLeft="@dimen/padding_default"
                        android:paddingRight="@dimen/padding_default"
                        android:layout_centerInParent="true"
                        style="@style/botonazul"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/btnAceptarGuardar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_aceptar"
                        android:textColor="@android:color/white"
                        android:paddingLeft="@dimen/padding_default"
                        android:paddingRight="@dimen/padding_default"
                        android:layout_centerInParent="true"
                        style="@style/botonazul"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
